Update UpdateCheckerUtil.java